# Ludus-FastMCP

./: LICENSE  README.md  pyproject.toml  pytest.ini
docs/: README.md  configuration.md  getting-started.md  safety.md  scenarios.md  tools-reference.md  troubleshooting.md
ludus_mcp/: exceptions.py
ludus_mcp/cli/: __init__.py  client.py  main.py
ludus_mcp/core/: __init__.py  client.py
ludus_mcp/mcp_client/: __init__.py  connection_manager.py  health_monitor.py  unified_client.py
ludus_mcp/scenarios/: __init__.py  ad_config.py  ad_scenarios.py  base.py  blue_team_scenarios.py  custom_scenarios.py  live_actions.py  malware_re_scenarios.py  multi_stage_scenarios.py  network_scenarios.py  purple_team_scenarios.py  randomizer.py  red_team_scenarios.py  role_manager.py  scenario_manager.py  siem_config.py  skeleton_templates.py  templates.py  walkthrough_generator.py  wazuh_config.py  wazuh_opsec.py  wireless_scenarios.py
ludus_mcp/schemas/: __init__.py  ai_config.py  hosts.py  networks.py  orchestration.py  profiles.py  ranges.py  scenario_customization.py  snapshots.py  templates.py  validation.py
tests/: __init__.py  conftest.py
tests/unit/: test_exceptions.py
tests/unit/test_utils/: test_cache.py  test_rate_limit.py  test_retry.py
