[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ludus-fastmcp"
version = "1.0.0"
description = "FastMCP 2.0 server for Ludus cyber range automation with AI integration - 157 tools for custom templates, range management, and more"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ludus MCP Team"}
]
keywords = ["mcp", "ludus", "cyber-range", "automation", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
ludus-fastmcp = "ludus_mcp.server.main:cli_main"
ludus-ai = "ludus_mcp.cli.main:main"

[tool.setuptools]
packages = [
    "ludus_mcp",
    "ludus_mcp.server",
    "ludus_mcp.server.handlers",
    "ludus_mcp.server.tools",
    "ludus_mcp.core",
    "ludus_mcp.mcp_client",
    "ludus_mcp.cli",
    "ludus_mcp.schemas",
    "ludus_mcp.scenarios",
    "ludus_mcp.utils",
]
package-data = {"*" = ["*.py"]}

[project.urls]
Homepage = "https://github.com/tjnull/ludus-mcp-python"
Documentation = "https://github.com/tjnull/ludus-mcp-python/blob/main/docs/README.md"
Repository = "https://github.com/tjnull/ludus-mcp-python"
Issues = "https://github.com/tjnull/ludus-mcp-python/issues"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
